# Backend-Exercise

./: README.md  output.csv  pyproject.toml  results.csv
src/get_papers_list/: cli.py  pubmed.py  utils.py
