[project]
name = "get-papers-list"
version = "0.1.0"
description = "Clt tool tp fetch pubmed research papers with company author"
authors = [
    {name = "Harshita K",email = "kharshita62@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "typer (>=0.16.0,<0.17.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "lxml (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.0"
pytest = "^8.4.1"
[tool.poetry.scripts]
get-papers-list = "get_papers_list.cli:app"


